@@ -106,11 +106,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
     2.4.x patch: trunk patch works, modulo CHANGES
     +1: minfrin, jim, ylavic
 
-   * mod_ssl: only read "active" values from the key_files array (PR 56306)
-     trunk patch: https://svn.apache.org/r1585918
-     2.4.x patch: trunk patch works (modulo CHANGES)
-     +1: kbrand, ylavic, jorton
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
